fixed navbar spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,16 +6,15 @@ body, html {
 
 /* top navbar */
 
-nav a {
-    float: left;
+#main-nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
   
 nav a {
-    margin-left: 24px;
-    font-size: 16px;
-    font-weight: 500;
+    margin-top: 1.5rem;
+    font-size: 1rem;
+    font-weight: 300;
     text-transform: uppercase;
     color: white;
     text-decoration: none;
